--- a/4.US_Job_opening_Glassdoor.ipynb
+++ b/4.US_Job_opening_Glassdoor.ipynb
@@ -33,9 +33,9 @@
    "outputs": [],
    "source": [
     "# Read csv files\n",
-    "data_engineer = pd.read_csv(\"DataEngineer.csv\")\n",
-    "data_analyst = pd.read_csv(\"DataAnalyst.csv\")\n",
-    "data_science = pd.read_csv(\"DataScientist.csv\")\n",
+    "data_engineer = pd.read_csv(\"Resources/input_folder/DataEngineer.csv\")\n",
+    "data_analyst = pd.read_csv(\"Resources/input_folder/DataAnalyst.csv\")\n",
+    "data_science = pd.read_csv(\"Resources/input_folder/DataScientist.csv\")\n",
     "\n",
     "# Data cleaning\n",
     "data_analyst = data_analyst.drop(columns=[\"Unnamed: 0\"])\n",
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
        "[334 rows x 5 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +797,7 @@
        "Houston, TX    29.760427  -95.369803  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -819,7 +819,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a163d6d029fc4b5e89a1e159d61941b6",
+       "model_id": "ff90e6fc087d47e29ae2c99949bb248f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -854,13 +854,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a163d6d029fc4b5e89a1e159d61941b6",
+       "model_id": "ff90e6fc087d47e29ae2c99949bb248f",
        "version_major": 2,
        "version_minor": 0
       },
